# Diploma

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  experiments.ipynb  main.py  metrics_notebook.ipynb  pyproject.toml  requirements.txt
diploma/: .env_template  base.py  evaluate.py  generator.py  parameters.py  text_splitter.py  utils.py
diploma/datasets/: synthetic_dataset.csv  synthetic_dataset_2.csv
diploma/models/: __init__.py  octoai.py  octoai_llms.py
diploma/results/RAGAS/: check_stability_after.csv  check_stability_before.csv  check_stability_llama-3-70b.csv  compare_chunks_splitter_related.csv  compare_splitters.csv
diploma/scripts/: generate_dataset.py
eval_results/: RAG_check_res_std.pickle  RAG_check_res_std_t_0.pickle  context_precision_hf.pickle  context_precision_octoai.pickle  new_RAG.pickle  new_RAG_embeddings.pickle
