[tool.poetry]
name = "diploma"
version = "0.1.0"
authors = ["Suslova Barbara <suslovavd2002@mail.ru>"]
description = "RAG evaluation"
packages = [{include = "diploma"}]

[tool.poetry.dependencies]
python = "^3.10"
ruff = "^0.1.13"
mypy = "^1.5.1"
openai = "^1.14.3"
octoai-sdk = "*"
chromadb = "^0.4.24"
tiktoken = "^0.6.0"
anthropic = "^0.21.3"
instructor = "^0.6.7"
datasets = "^2.18.0"
xmltodict = "^0.13.0"
tqdm = "^4.66.2"
edgartools = "2.16.1"
langchain = "0.1.16"
langchain_experimental = "*"
langchain_community = "0.0.33"
sentence-transformers = "*"
pypdf = "^4.2.0"
pycryptodome = "^3.15.0"
seaborn = "^0.13.2"
ragas = {path = "./deps/ragas", develop=true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
